--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # PsychoPy data
-/data/
-data-backup/
+*data/
+
+# PsychoPy auto-generated files
+*_legacy.*
+*.js
+*.html
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -162,3 +167,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.vscode/settings.json
