Add psychopy/scripts/tests to .gitignore
The psychopy/scripts/tests directory is now ignored to prevent test files from being tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ cython_debug/
 .vscode/settings.json
 psychopy/Phoda.zip
 psychopy/experiments/open-closed/open-closed.py
+/psychopy/scripts/tests
